--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,43 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+.early.coverage
+
+# Project-specific exclusions
+# Model artifacts and outputs (large files)
+outputs/
+models/
+*.pt
+*.bin
+*.pth
+*.onnx
+
+# Data files (should not be in public repos)
+data/
+datasets/
+
+# Log files
+logs/
+*.log
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Local environment files
+.env.local
+.env.development
+.env.production
