Updated code files

--- a/env.example
+++ b/env.example
@@ -15,14 +15,24 @@ MODEL_PATH=outputs/models/bertweet_enhanced
 MODEL_TYPE=bertweet
 MODEL_VERSION=1.0.0
 
-# Database Configuration
+# Database Configuration (REQUIRED)
 DATABASE_URL=postgresql://postgres:password@localhost:5432/crisis_alert
 REDIS_URL=redis://localhost:6379
 
-# Security Configuration
-SECRET_KEY=your-secret-key-here-change-in-production
-ALLOWED_HOSTS=*
-CORS_ORIGINS=*
+# Docker Database Configuration (REQUIRED for Docker deployment)
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=changeme-secure-database-password
+POSTGRES_DB=aicrisisalert
+
+# Security Configuration (REQUIRED)
+SECRET_KEY=changeme-generate-a-secure-32-character-secret-key
+API_KEY=changeme-generate-a-secure-32-character-api-key
+ALLOWED_HOSTS=localhost,127.0.0.1
+CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# Rate Limiting Configuration
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_PERIOD=3600
 
 # Logging Configuration
 LOG_LEVEL=INFO
